cluster/apps/mediaserver/prowlarr/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prowlarr
  namespace: mediaserver
spec:
  hosts:
    - prowlarr.${ROOT_DOMAIN}
  gateways:
    - istio-ingress/cluster-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 9696
            host: prowlarr.mediaserver.svc.cluster.local
